--- a/scheme.cabal
+++ b/scheme.cabal
@@ -7,8 +7,8 @@ maintainer:          maarten.j.jacobs@gmail.com
 build-type:          Simple
 cabal-version:       >=1.10
 
-library scheme-core
-  exposed-modules:  Scheme.Core 
+library scheme-parser
+  exposed-modules:  Scheme.Parser
   build-depends:    base >=4.10 && <4.11
                   , parsec == 3.1.11
   default-language: Haskell2010
@@ -16,7 +16,7 @@ library scheme-core
 
 executable scheme
   main-is:             Main.hs
-  build-depends:       base >=4.10 && <4.11, scheme-core
+  build-depends:       base >=4.10 && <4.11, scheme-parser
   hs-source-dirs:      app
   default-language:    Haskell2010
 
@@ -25,10 +25,10 @@ Test-Suite scheme-spec
   main-is:          Spec.hs
   build-depends:    base
                   , Cabal >= 1.10
-                  , scheme-core
+                  , scheme-parser
                   , hspec == 2.4.4
                   , parsec == 3.1.11
   default-language: Haskell2010
   ghc-options:      -Wall
   hs-source-dirs:   tests
-  other-modules:    Scheme.CoreSpec
+  other-modules:    Scheme.ParserSpec
