--- a/scheme.cabal
+++ b/scheme.cabal
@@ -8,7 +8,8 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library scheme-parser
-  exposed-modules:  Scheme.Parser
+  exposed-modules:  Scheme.Core
+                  , Scheme.Parser
   build-depends:    base >=4.10 && <4.11
                   , parsec == 3.1.11
   default-language: Haskell2010
