--- a/scheme.cabal
+++ b/scheme.cabal
@@ -7,9 +7,10 @@ maintainer:          maarten.j.jacobs@gmail.com
 build-type:          Simple
 cabal-version:       >=1.10
 
-library scheme-parser
+library scheme-lang
   exposed-modules:  Scheme.Core
                   , Scheme.Parser
+                  , Scheme.Evaluator
   build-depends:    base >=4.10 && <4.11
                   , parsec == 3.1.11
   default-language: Haskell2010
@@ -17,7 +18,10 @@ library scheme-parser
 
 executable scheme
   main-is:             Main.hs
-  build-depends:       base >=4.10 && <4.11, scheme-parser
+  build-depends:       base >=4.10 && <4.11
+                     , scheme-lang
+                     , parsec == 3.1.11
+  ghc-options:         -Wall
   hs-source-dirs:      app
   default-language:    Haskell2010
 
@@ -26,10 +30,11 @@ Test-Suite scheme-spec
   main-is:          Spec.hs
   build-depends:    base
                   , Cabal >= 1.10
-                  , scheme-parser
+                  , scheme-lang
                   , hspec == 2.4.4
                   , parsec == 3.1.11
   default-language: Haskell2010
   ghc-options:      -Wall
   hs-source-dirs:   tests
   other-modules:    Scheme.ParserSpec
+                  , Scheme.EvaluatorSpec
