--- a/scheme.cabal
+++ b/scheme.cabal
@@ -13,6 +13,7 @@ library scheme-lang
                   , Scheme.Evaluator
   build-depends:    base >=4.10 && <4.11
                   , parsec == 3.1.11
+                  , lens == 4.15.4
   default-language: Haskell2010
   hs-source-dirs:   src
 
