--- a/scheme.cabal
+++ b/scheme.cabal
@@ -14,6 +14,7 @@ library scheme-lang
   build-depends:    base >=4.10 && <4.11
                   , parsec == 3.1.11
                   , lens == 4.15.4
+                  , mtl == 2.2.1
   default-language: Haskell2010
   hs-source-dirs:   src
 
